[tool.poetry]
name = "Bevy"
version = "0.3.4"
description = "Simple app framework that helps you build loosely coupled applications."
authors = ["Zech Zimmerman <hi@zech.codes>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ZechCodes/Bevy"
repository = "https://github.com/ZechCodes/Bevy"
documentation = "https://github.com/ZechCodes/Bevy/blob/master/README.md"
keywords = ["dependency", "injection", "annotations", "types"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
