[tool.poetry]
name = "Bevy"
version = "3.0.0-beta.4"
description = "Python Dependency Injection made simple so you can focus on creating amazing code."
authors = ["Zech Zimmerman <hi@zech.codes>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ZechCodes/Bevy"
repository = "https://github.com/ZechCodes/Bevy"
documentation = "https://github.com/ZechCodes/Bevy/blob/main/README.md"
include = ["bevy/*.py"]
keywords = ["dependency", "injection", "annotations", "types"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

[tool.poetry.dependencies]
python = "^3.12"
tramp = "^0.1.17"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.18.3"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.1.9"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^0.10.1"
black = "^23.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
