[tool.poetry]
name = "Bevy.app"
version = "0.1.0"
description = "An app framework designed to be used with the Bevy dependency injection framework."
authors = ["Zech Zimmerman <hi@zech.codes>"]
license = "MIT"
readme = "bevy/events/README.md"
homepage = "https://github.com/ZechCodes/Bevy/tree/main/bevy/app"
repository = "https://github.com/ZechCodes/Bevy/tree/main/bevy/app"
documentation = "https://github.com/ZechCodes/Bevy/blob/main/bevy/app/README.md"
packages = [
    { include = "bevy/app/*.py" }
]
keywords = ["dependency", "injection", "annotations", "types", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

[tool.poetry.dependencies]
python = "^3.7"
bevy = "^0.5.3"
"bevy.config" = "^0.1.2"
"bevy.events" = "^0.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
