[tool.poetry]
name = "Bevy.config"
version = "0.1.2"
description = "A config loader designed to be used with the Bevy dependency injection framework."
authors = ["Zech Zimmerman <hi@zech.codes>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ZechCodes/Bevy"
repository = "https://github.com/ZechCodes/Bevy"
documentation = "https://github.com/ZechCodes/Bevy/blob/master/README.md"
packages = [
    { include = "bevy/config/*.py" }
]
keywords = ["dependency", "injection", "annotations", "types"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

[tool.poetry.dependencies]
python = "^3.7"
bevy = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
