[tool.poetry]
name = "Bevy.events"
version = "0.1.3"
description = "An event dispatch framework designed to be used with the Bevy dependency injection framework."
authors = ["Zech Zimmerman <hi@zech.codes>"]
license = "MIT"
readme = "bevy/events/README.md"
homepage = "https://github.com/ZechCodes/Bevy/bevy/events/README.md"
repository = "https://github.com/ZechCodes/Bevy"
documentation = "https://github.com/ZechCodes/Bevy/blob/master/bevy/events/README.md"
packages = [
    { include = "bevy/events/*.py" }
]
keywords = ["dependency", "injection", "annotations", "types"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

[tool.poetry.dependencies]
python = "^3.7"
gully = "^0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
